# kafka-crypto-stream

./: .gitignore  README.md  crypto_config.conf  docker-compose.yml  pyproject.toml
unifor-projeto/: 04-DSA-DataViz.ipynb  create-consumer-kafka.py  create-producer-kafka.py  create-topic-kafka.py  streamlit.py
